added final css to style.css

--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
 
 <body>
 
-    <div>
+    <div class="header">
         header
     </div>
 
-    <div>
+    <div class="header">
         nav
     </div>
 
-    <div>
+    <div class="section">
         section
-        <div>
+        <div class="article">
             article 
-            <div>
+            <div class="h1-3">
                 h1, h2, h3
             </div>
-            <div>
+            <div class="p">
                 p
             </div>
         </div>
     </div>
 
-    <div>
+    <div class="aside">
         aside
     </div>
 
-    <div>
+    <div class="footer">
         footer
     </div>
 
