--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
     <title>WireFrame</title>
 
+    <!--Link to the style sheet-->
     <link rel="stylesheet" type="text/css" href="style.css">
   
 </head>
 
 <body>
-
+<!--top part of the wireframe includes header and nav-->
     <div class="header">
         header
     </div>
@@ -20,7 +21,7 @@
     <div class="header">
         nav
     </div>
-
+<!--middle part of wire frame includes section and aside-->
     <div class="section">
         section
         <div class="article">
@@ -37,7 +38,7 @@
     <div class="aside">
         aside
     </div>
-
+<!--bottom part of wireframe includes the footer-->
     <div class="footer">
         footer
     </div>
